BaSP-W03-2022: Fixing the position of the nav and footer

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -195,7 +195,7 @@
             </section>
             <section id="contact-us">
                 <h2 class="titles-content"> CONTACT US </h2>
-                <form>
+                <form class="contact-form">
                     <label> Name </label>
                     <input id= "name" type="text" placeholder="Insert your name">
                     <label> E-mail </label>
@@ -214,79 +214,89 @@
             </section>
         </section>
         <footer>
-            <h2> TRACKGENIX </h2>
-            <h4> Products </h4>
-            <ol>
-                <li>
-                    <a href="#features"> Features </a>
-                </li>
-                <li>
-                    <a href="#"> Downloads </a>
-                </li>
-                <li>
-                    <a href="#"> Integrations </a>
-                </li>
-                <li>
-                    <a href="#"> Extras </a>
-                </li>
-            </ol>
-            <h4> Company </h4>
-            <ol>
-                <li>
-                    <a href="#homepage"> About us </a>
-                </li>
-                <li>
-                    <a href="#"> Clients </a>
-                </li>
-                <li>
-                    <a href="#"> Resourses </a>
-                </li>
-                <li>
-                    <a href="#"> Blog </a>
-                </li>
-            </ol>
-            <h4> Support </h4>
-            <ol>
-                <li>
-                    <a href="#"> Help </a>
-                </li>
-                <li>
-                    <a href="#"> Tutorials </a>
-                </li>
-                <li>
-                    <a href="#"> API </a>
-                </li>
-                <li>
-                    <a href="#contact-us"> Contact </a>
-                </li>
-            </ol>
-            <div id="social-media">
-                <button>
-                    <a href="https://twitter.com/">
-                        <img src="img/twitter-footer.png">
-                    </a>
-                </button>
-                <button>
-                    <a href="https://www.linkedin.com/">
-                        <img src="img/linkedin-footer.png">
-                    </a>
-                </button>
-                <button>
-                    <a href="https://github.com/">
-                        <img src="img/github-footer.png">
-                    </a>
-                </button>
-                <button>
-                    <a href="https://www.instagram.com/">
-                        <img src="img/instagram-footer.png">
-                    </a>
-                </button>
-                <button>
-                    <a href="https://www.facebook.com/">
-                        <img src="img/facebook-footer.png">
-                    </a>
-                </button>
+            <div class ="first-footer-part">  
+                <div class="footer-title"> 
+                    <h2> TRACKGENIX </h2>
+                </div>
+                <div class="footer-list-one">
+                    <h4> Products </h4>
+                    <ol>
+                        <li>
+                            <a href="#features"> Features </a>
+                        </li>
+                        <li>
+                            <a href="#"> Downloads </a>
+                        </li>
+                        <li>
+                            <a href="#"> Integrations </a>
+                        </li>
+                        <li>
+                            <a href="#"> Extras </a>
+                        </li>
+                    </ol>
+                </div>
+                <div class="footer-list-one">   
+                    <h4> Company </h4>
+                    <ol>
+                        <li>
+                            <a href="#homepage"> About us </a>
+                        </li>
+                        <li>
+                            <a href="#"> Clients </a>
+                        </li>
+                        <li>
+                            <a href="#"> Resourses </a>
+                        </li>
+                        <li>
+                            <a href="#"> Blog </a>
+                        </li>
+                    </ol>
+                </div>
+                <div class="footer-list-one">
+                    <h4> Support </h4>
+                    <ol>
+                        <li>
+                            <a href="#"> Help </a>
+                        </li>
+                        <li>
+                            <a href="#"> Tutorials </a>
+                        </li>
+                        <li>
+                            <a href="#"> API </a>
+                        </li>
+                        <li>
+                            <a href="#contact-us"> Contact </a>
+                        </li>
+                    </ol>
+                </div>
             </div>
+                <div id="social-media">
+                    <button>
+                        <a href="https://twitter.com/">
+                            <img src="img/twitter-footer.png" id="social">
+                        </a>
+                    </button>
+                    <button>
+                        <a href="https://www.linkedin.com/">
+                            <img src="img/linkedin-footer.png">
+                        </a>
+                    </button>
+                    <button>
+                        <a href="https://github.com/">
+                            <img src="img/github-footer.png">
+                        </a>
+                    </button>
+                    <button>
+                        <a href="https://www.instagram.com/">
+                            <img src="img/instagram-footer.png">
+                        </a>
+                    </button>
+                    <button>
+                        <a href="https://www.facebook.com/">
+                            <img src="img/facebook-footer.png">
+                        </a>
+                    </button>
+                </div>
         </footer>
     </body>
 </html>
