--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -5,10 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/styles.css">
         <link rel="stylesheet" href="./css/header.css">
+        <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/sidebar.css">
         <link rel="stylesheet" href="./css/footer/css">
+        <link rel="stylesheet" href="./css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap"
@@ -20,8 +21,9 @@
     </head>
     <body>
         <header>
-            <h1> Trackgenix SA </h1>
+            <h1>Trackgenix SA</h1>
         </header>
+        <!---   
         <nav>
             <form>
                 <div class="container-search">
@@ -34,12 +36,12 @@
                 </div>
             </form>
             <button class="buttons-account" id="log-in">
-                <a href="#"> LOG IN </a>
+                <a href="#"> Log in </a>
             </button>
             <button class="buttons-account" id="sign-up">
-                <a href="#"> SIGN UP </a>
+                <a href="#"> Sign up </a>
             </button>
-            <p class="menu"> MENU </p>
+            <p class="menu"> Menu </p>
             <ul class="sub-menu">
                 <li>
                     <a href="#homepage">Homepage</a>
@@ -55,7 +57,7 @@
                 </li>
             </ul>
             <div class="get-in-touch">
-                <p class="menu">GET IN TOUCH</p>
+                <p class="menu">Get in touch</p>
                 <ul class="more-data">
                     <li>mailinfo@trackgenix.com</li>
                     <li>123-456789</li>
@@ -63,11 +65,12 @@
                 </ul>
             </div>
         </nav>
+        ----->  
         <section class="main">
-            <div class="info-contain">
+            <section class="info-contain">
                 <div class="first-contain">
                     <div class="info-left">
-                        <h2 class="title">What is Trackgenix</h2>
+                        <h2>What is Trackgenix</h2>
                         <p class="info-p">
                             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
                             type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
@@ -83,7 +86,7 @@
                 </div>
                 <div class="second-contain">
                     <div class="info-right">
-                        <h2 class="title">Our history</h2>
+                        <h2>Our history</h2>
                         <p class="info-p">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
@@ -97,102 +100,101 @@
                         <img src="img/content-image-two.jpg" class="image size-image-two">
                     </div>
                 </div>
-            </div>
-        </section>
-            <section class="features">
-                <div class="features-content">
-                    <h2 class="titles-content">Features</h2>
-                    <p class="info-p feature-p">
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                        type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    </p>
-                    <ul>
-                        <li>
-                            <span class= "item">Item 1:</span>
-                            lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span class= "item">Item 2:</span>
-                            lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span class= "item">Item 3:</span>
-                            lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span class= "item">Item 4:</span>
-                            lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span class= "item">Item 5:</span>
-                            lorem ipsum is simply dummy text of the printin
-                        </li>
-                    </ul>
+            </section>
+            <section class="features-content">
+                <h2>Features</h2>
+                <p class="info-p feature-p">
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                    type and an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <ul>
+                    <li>
+                        <span class= "item">Item 1:</span>
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        <span class= "item">Item 2:</span>
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        <span class= "item">Item 3:</span>
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        <span class= "item">Item 4:</span>
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                    <li>
+                        <span class= "item">Item 5:</span>
+                        lorem ipsum is simply dummy text of the printin
+                    </li>
+                </ul>
+            </section>
+            <section class="why-trackgenix">
+                <h2>Why Trackgenix?</h2>
+                <div class="contain-one">
+                    <div class="image-left-one"> 
+                        <img src="img/content-image-three.png" class="image size-image-two">
+                    </div>
+                    <div class="content-right-one"> 
+                        <h3 class="subheader">Subheader</h3>
+                        <p class="info-p">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                            dummy text ever since the 1500s.
+                        </p>
+                        <button class="learn-more-buttons">
+                            <a href="#">Learn more</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="contain-one">
+                    <div class="image-right-two">
+                        <img src="img/content-image-four.jpg" class="image size-image-two">
+                    </div>
+                    <div class="content-left-two">
+                        <h3 class="subheader">Subheader</h3>
+                        <p class="info-p">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                            dummy text ever since the 1500s.
+                        </p>
+                        <button class="learn-more-buttons">
+                            <a href="#">Learn more</a>
+                        </button>
+                    </div>
+                </div>  
+                <div class="contain-one">
+                    <div class="image-left-one">
+                        <img src="img/content-image-five.jpg" class="image size-image-two">
+                    </div>
+                    <div class="content-right-one">
+                        <h3 class="subheader">Subheader</h3>
+                        <p class="info-p">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                            dummy text ever since the 1500s.
+                        </p>
+                        <button class="learn-more-buttons">
+                            <a href="#">Learn more</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="contain-one"> 
+                    <div class="image-right-two">
+                        <img src="img/content-image-six.jpg" class="image size-image-two">
+                    </div>
+                    <div class="content-left-two">
+                        <h3 class="subheader">Subheader</h3>
+                        <p class="info-p">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                            dummy text ever since the 1500s.
+                        </p>
+                        <button class="learn-more-buttons">
+                            <a href="#">Learn more</a>
+                        </button>
+                    </div>
                 </div>
             </section>
-            <h2 class="titles-content">WHY TRACKGENIX?</h2>
-            <div class="contain-one">
-                <div class="image-left-one"> 
-                    <img src="img/content-image-three.png" class="image size-image-two">
-                </div>
-                <div class="content-right-one"> 
-                    <h3 class="subheader">Subheader</h3>
-                    <p class="info-p">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                        dummy text ever since the 1500s.
-                    </p>
-                    <button class="learn-more-buttons">
-                        <a href="#">Learn more</a>
-                    </button>
-                </div>
-            </div>
-            <div class="contain-one">
-                <div class="image-right-two">
-                    <img src="img/content-image-four.jpg" class="image size-image-two">
-                </div>
-                <div class="content-left-two">
-                    <h3 class="subheader">Subheader</h3>
-                    <p class="info-p">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                        dummy text ever since the 1500s.
-                    </p>
-                    <button class="learn-more-buttons">
-                        <a href="#">Learn more</a>
-                    </button>
-                </div>
-            </div>  
-            <div class="contain-one">
-                <div class="image-left-one">
-                    <img src="img/content-image-five.jpg" class="image size-image-two">
-                </div>
-                <div class="content-right-one">
-                    <h3 class="subheader">Subheader</h3>
-                    <p class="info-p">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                        dummy text ever since the 1500s.
-                    </p>
-                    <button class="learn-more-buttons">
-                        <a href="#">Learn more</a>
-                    </button>
-                </div>
-            </div>
-            <div class="contain-one"> 
-                <div class="image-right-two">
-                    <img src="img/content-image-six.jpg" class="image size-image-two">
-                </div>
-                <div class="content-left-two">
-                    <h3 class="subheader">Subheader</h3>
-                    <p class="info-p">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                        dummy text ever since the 1500s.
-                    </p>
-                    <button class="learn-more-buttons">
-                        <a href="#">Learn more</a>
-                    </button>
-                </div>
-            </div>
-            <section id="contact-us">
-                <h2 class="titles-content">CONTACT US</h2>
+            <section class="contact-us">
+                <h2>Contact us</h2>
                 <form class="contact-form">
                     <label>Name</label>
                     <input id= "name" type="text" placeholder="Insert your name">
@@ -211,6 +213,7 @@
                 </form>
             </section>
         </section>
+        <!--- 
         <footer>
             <div class ="first-footer-part">  
                 <div class="footer-title"> 
@@ -296,5 +299,6 @@
                     </button>
                 </div>
         </footer>
+        -->
     </body>
 </html>
