BaSP-W04-2022: More changes in sizes with flex

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -81,7 +81,7 @@
                         </p>
                     </div>
                     <div class="first-image">
-                        <img src="img/content-image-one.png" class="image size-image-one">
+                        <img src="img/content-image-one.png">
                     </div>
                 </div>
                 <div class="second-contain">
@@ -97,7 +97,7 @@
                         </button>
                     </div>
                     <div class="second-image">
-                        <img src="img/content-image-two.jpg" class="image size-image-two">
+                        <img src="img/content-image-two.jpg">
                     </div>
                 </div>
             </section>
@@ -134,7 +134,7 @@
                 <h2>Why Trackgenix?</h2>
                 <div class="contain-one">
                     <div class="image-left-one"> 
-                        <img src="img/content-image-three.png" class="image size-image-two">
+                        <img src="img/content-image-three.png">
                     </div>
                     <div class="content-right-one"> 
                         <h3 class="subheader">Subheader</h3>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="contain-one">
                     <div class="image-right-two">
-                        <img src="img/content-image-four.jpg" class="image size-image-two">
+                        <img src="img/content-image-four.jpg">
                     </div>
                     <div class="content-left-two">
                         <h3 class="subheader">Subheader</h3>
@@ -164,7 +164,7 @@
                 </div>  
                 <div class="contain-one">
                     <div class="image-left-one">
-                        <img src="img/content-image-five.jpg" class="image size-image-two">
+                        <img src="img/content-image-five.jpg">
                     </div>
                     <div class="content-right-one">
                         <h3 class="subheader">Subheader</h3>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="contain-one"> 
                     <div class="image-right-two">
-                        <img src="img/content-image-six.jpg" class="image size-image-two">
+                        <img src="img/content-image-six.jpg">
                     </div>
                     <div class="content-left-two">
                         <h3 class="subheader">Subheader</h3>
