--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -72,12 +72,9 @@
                     <div class="info-left">
                         <h2>What is Trackgenix</h2>
                         <p>
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                            type and an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply
-                            dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard  dummy text ever since
-                            the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                            scrambled it to make a type specimen book.
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+                            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 7
+                            make a type specimen book.  
                         </p>
                     </div>
                     <div class="first-image">
