--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -89,7 +89,7 @@
                             dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                             specimen book.
                         </p>
-                        <button class="first-learn-button">
+                        <button>
                             <a href="#">Learn more</a>
                         </button>
                     </div>
