BaSP-WO4-2022: Improvements in the positions were made. The style of the buttons was settled

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -139,7 +139,7 @@
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             dummy text ever since the 1500s.
                         </p>
-                        <button class="learn-more-buttons">
+                        <button>
                             <a href="#">Learn more</a>
                         </button>
                     </div>
@@ -154,7 +154,7 @@
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             dummy text ever since the 1500s.
                         </p>
-                        <button class="learn-more-buttons">
+                        <button>
                             <a href="#">Learn more</a>
                         </button>
                     </div>
@@ -169,7 +169,7 @@
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             dummy text ever since the 1500s.
                         </p>
-                        <button class="learn-more-buttons">
+                        <button>
                             <a href="#">Learn more</a>
                         </button>
                     </div>
@@ -184,7 +184,7 @@
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
                             dummy text ever since the 1500s.
                         </p>
-                        <button class="learn-more-buttons">
+                        <button>
                             <a href="#">Learn more</a>
                         </button>
                     </div>
@@ -194,9 +194,9 @@
                 <h2>Contact us</h2>
                 <form class="contact-form">
                     <label>Name</label>
-                    <input id= "name" type="text" placeholder="Insert your name">
+                    <input type="text" placeholder="Insert your name">
                     <label>E-mail</label>
-                    <input id= "email" type="text" placeholder="Insert your email">
+                    <input type="text" placeholder="Insert your email">
                     <label>Category</label>
                     <select id="option">
                         <option>Quality Assurance</option>
@@ -210,8 +210,7 @@
                 </form>
             </section>
         </section>
-        <!--- 
-        <footer>
+        <!--- <footer>
             <div class ="first-footer-part">  
                 <div class="footer-title"> 
                     <h2>TRACKGENIX</h2>
@@ -296,6 +295,6 @@
                     </button>
                 </div>
         </footer>
-        -->
+        ---->
     </body>
 </html>
