BaSP-W04-2022: Finishing the contact area

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -198,15 +198,15 @@
                     <label>E-mail</label>
                     <input type="text" placeholder="Insert your email">
                     <label>Category</label>
-                    <select id="option">
+                    <select>
                         <option>Quality Assurance</option>
                         <option>Developer</option>
                         <option>Project Manager</option>
                         <option>Human Resources</option>
                     </select>
-                    <textarea id="message" placeholder="write us a message..."></textarea>
-                    <input type="submit" id="contact-send" value="Send message">
-                    <input type="button" id="contact-reset" value="Reset">
+                    <textarea placeholder="write us a message..."></textarea>
+                    <input type="submit" class="contact-send" value="Send message">
+                    <input type="button" class="contact-reset" value="Reset">
                 </form>
             </section>
         </section>
