BaSP-W04-2022: The contact-area and footer were finished in mobile

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./css/header.css">
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/sidebar.css">
-        <link rel="stylesheet" href="./css/footer/css">
+        <link rel="stylesheet" href="./css/footer.css">
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -205,16 +205,23 @@
                         <option>Human Resources</option>
                     </select>
                     <textarea placeholder="write us a message..."></textarea>
-                    <input type="submit" class="contact-send" value="Send message">
-                    <input type="button" class="contact-reset" value="Reset">
+                    <div class="buttons-contact"> 
+                        <div class="contact-send">  
+                            <input type="submit" value="Send message">
+                        </div>
+                        <div class="contact-reset"> 
+                            <input type="button" value="Reset">
+                        </div>
+                    </div>
                 </form>
             </section>
         </section>
-        <!--- <footer>
+        <footer>
+            <div class="footer-title"> 
+                <h2>TRACKGENIX</h2>
+            </div>
             <div class ="first-footer-part">  
-                <div class="footer-title"> 
-                    <h2>TRACKGENIX</h2>
-                </div>
+                
                 <div class="footer-list-one">
                     <h4>Products</h4>
                     <ol>
@@ -295,6 +302,5 @@
                     </button>
                 </div>
         </footer>
-        ---->
     </body>
 </html>
