BaSP-W04-2022: The desktop version was started

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -20,52 +20,54 @@
         <title> Trackgenix SA </title>
     </head>
     <body>
+        <div class="content">
+            <div>
+                <nav>
+                    <form>
+                        <div class="container-search">
+                            <input class= "search" type="text" placeholder="Search">
+                            <span class="icon">
+                                <button type="submit">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </button>
+                            </span>
+                        </div>
+                    </form>
+                    <button class="buttons-account" id="log-in">
+                        <a href="#"> Log in </a>
+                    </button>
+                    <button class="buttons-account" id="sign-up">
+                        <a href="#"> Sign up </a>
+                    </button>
+                    <p class="menu"> Menu </p>
+                    <ul class="sub-menu">
+                        <li>
+                            <a href="#homepage">Homepage</a>
+                        </li>
+                        <li>
+                            <a href="#features">Features</a>
+                        </li>
+                        <li>
+                            <a href="#why-trackgenix">Why Trackgenix?</a>
+                        </li>
+                        <li>
+                            <a href="#contact-us">Contact Us</a>
+                        </li>
+                    </ul>
+                    <div class="get-in-touch">
+                        <p class="menu">Get in touch</p>
+                        <ul class="more-data">
+                            <li>mailinfo@trackgenix.com</li>
+                            <li>123-456789</li>
+                            <li>123 fake road #2000 Rosario, Argentina</li>
+                        </ul>
+                    </div>
+                </nav>
+            </div> 
+        <div>
         <header>
             <h1>Trackgenix SA</h1>
         </header>
-        <!---   
-        <nav>
-            <form>
-                <div class="container-search">
-                    <input class= "search" type="text" placeholder="Search">
-                    <span class="icon">
-                        <button type="submit">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
-                    </span>
-                </div>
-            </form>
-            <button class="buttons-account" id="log-in">
-                <a href="#"> Log in </a>
-            </button>
-            <button class="buttons-account" id="sign-up">
-                <a href="#"> Sign up </a>
-            </button>
-            <p class="menu"> Menu </p>
-            <ul class="sub-menu">
-                <li>
-                    <a href="#homepage">Homepage</a>
-                </li>
-                <li>
-                    <a href="#features">Features</a>
-                </li>
-                <li>
-                    <a href="#why-trackgenix">Why Trackgenix?</a>
-                </li>
-                <li>
-                    <a href="#contact-us">Contact Us</a>
-                </li>
-            </ul>
-            <div class="get-in-touch">
-                <p class="menu">Get in touch</p>
-                <ul class="more-data">
-                    <li>mailinfo@trackgenix.com</li>
-                    <li>123-456789</li>
-                    <li>123 fake road #2000 Rosario, Argentina</li>
-                </ul>
-            </div>
-        </nav>
-        ----->  
         <section class="main">
             <section class="info-contain">
                 <div class="first-contain">
@@ -302,5 +304,7 @@
                     </button>
                 </div>
         </footer>
+    </div>
+    </div>
     </body>
 </html>
