BaSP-W04-2022: The desktop version was completed

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <div class="content">
-            <div>
+            <div class="navbar"> 
                 <nav>
                     <form>
                         <div class="container-search">
@@ -33,12 +33,14 @@
                             </span>
                         </div>
                     </form>
-                    <button class="buttons-account" id="log-in">
-                        <a href="#"> Log in </a>
-                    </button>
-                    <button class="buttons-account" id="sign-up">
-                        <a href="#"> Sign up </a>
-                    </button>
+                    <div class="account-buttons">
+                        <button class="buttons-account" id="log-in">
+                            <a href="#"> Log in </a>
+                        </button>
+                        <button class="buttons-account" id="sign-up">
+                            <a href="#"> Sign up </a>
+                        </button>
+                    </div>
                     <p class="menu"> Menu </p>
                     <ul class="sub-menu">
                         <li>
@@ -63,7 +65,7 @@
                         </ul>
                     </div>
                 </nav>
-            </div> 
+            </div>
         <div>
         <header>
             <h1>Trackgenix SA</h1>
@@ -74,9 +76,9 @@
                     <div class="info-left">
                         <h2>What is Trackgenix</h2>
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                             standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 7
-                            make a type specimen book.  
+                            make a type specimen book.
                         </p>
                     </div>
                     <div class="first-image">
@@ -132,10 +134,10 @@
             <section class="why-trackgenix">
                 <h2>Why Trackgenix?</h2>
                 <div class="contain-one">
-                    <div class="image-left-one"> 
+                    <div class="image-left-one">
                         <img src="img/content-image-three.png">
                     </div>
-                    <div class="content-right-one"> 
+                    <div class="content-right-one">
                         <h3 class="subheader">Subheader</h3>
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
@@ -160,7 +162,7 @@
                             <a href="#">Learn more</a>
                         </button>
                     </div>
-                </div>  
+                </div>
                 <div class="contain-one">
                     <div class="image-left-one">
                         <img src="img/content-image-five.jpg">
@@ -176,7 +178,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="contain-one"> 
+                <div class="contain-one">
                     <div class="image-right-two">
                         <img src="img/content-image-six.jpg">
                     </div>
@@ -207,11 +209,11 @@
                         <option>Human Resources</option>
                     </select>
                     <textarea placeholder="write us a message..."></textarea>
-                    <div class="buttons-contact"> 
-                        <div class="contact-send">  
+                    <div class="buttons-contact">
+                        <div class="contact-send">
                             <input type="submit" value="Send message">
                         </div>
-                        <div class="contact-reset"> 
+                        <div class="contact-reset">
                             <input type="button" value="Reset">
                         </div>
                     </div>
@@ -219,11 +221,10 @@
             </section>
         </section>
         <footer>
-            <div class="footer-title"> 
+            <div class="footer-title">
                 <h2>TRACKGENIX</h2>
             </div>
-            <div class ="first-footer-part">  
-                
+            <div class ="first-footer-part">
                 <div class="footer-list-one">
                     <h4>Products</h4>
                     <ol>
@@ -241,7 +242,7 @@
                         </li>
                     </ol>
                 </div>
-                <div class="footer-list-one">   
+                <div class="footer-list-one">
                     <h4>Company</h4>
                     <ol>
                         <li>
