--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -9,8 +9,9 @@
     <script type="text/javascript" src="./exercises/03_arrays.js"></script>
     <script type="text/javascript" src="./exercises/04_if_else.js"></script>
     <script type="text/javascript" src="./exercises/05_for.js"></script>
+    <script type="text/javascript" src="./exercises/06_funciones.js"></script>
     <title>Document</title>
 </head>
-<body>    
+<body>
 </body>
 </html>
