--- a/Semana-06/login.html
+++ b/Semana-06/login.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap"
     rel="stylesheet">
+    <script src="./javascript/login.js" type="text/javascript"></script>
     <title>Log-in</title>
 </head>
 <body>
@@ -66,15 +67,16 @@
         <p>Sign In</p>
         <div class="log-in-content"> 
             <label>E-mail</label>
-            <input type="text" placeholder="Enter e-mail">
+            <input id="email" name="email" type="text" placeholder="Enter e-mail" onblur="rewriteEmail()">
+            <span id="wrong-email"></span>
             <label>Password</label>
-            <input type="password" placeholder="Enter Password">
+            <input id="email" type="password" placeholder="Enter Password">
             <div class="remember-me">
             <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
             </label>
             </div>
-            <button type="submit">Login</button>
+            <button id="send" type="submit" >Login</button>
             <span>
                 <a href="#">Forgot password?</a>
             </span>
