BaSP-W06-2022: Finishing the validations of login

--- a/Semana-06/login.html
+++ b/Semana-06/login.html
@@ -67,10 +67,11 @@
         <p>Sign In</p>
         <div class="log-in-content"> 
             <label>E-mail</label>
-            <input id="email" name="email" type="text" placeholder="Enter e-mail" onblur="rewriteEmail()">
+            <input id="email" name="email" type="text" placeholder="Enter e-mail" >
             <span id="wrong-email"></span>
             <label>Password</label>
-            <input id="email" type="password" placeholder="Enter Password">
+            <input id="password" type="password" placeholder="Enter Password">
+            <span id="wrong-password"></span>
             <div class="remember-me">
             <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
